--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="fr">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script
+			src="https://kit.fontawesome.com/3ce90480cc.js"
+			crossorigin="anonymous"
+		></script>
+		<script src="fishEye.js"></script>
+		<link rel="stylesheet" href="public/css/style.css" />
+		<title>Fish Eye</title>
+	</head>
+	<body>
+		<header class="header">
+			<div id="content">
+				<a href="#" class="header__link">Passer au contenu</a>
+			</div>
+			<a class="header__logo" href="#"
+				>Fish<img
+					src="images/logo/logo.png"
+					alt="logo fisheye"
+					class="header__logo__img"
+				/>ye</a
+			>
+			<nav class="header__nav">
+				<ul class="header__nav__ul">
+					<li><button class="tag">#Portait</button></li>
+					<li><button class="tag">#Art</button></li>
+					<li><button class="tag">#Fashion</button></li>
+					<li><button class="tag">#Architecture</button></li>
+					<li><button class="tag">#Travel</button></li>
+					<li><button class="tag">#Sports</button></li>
+					<li><button class="tag">#Animals</button></li>
+					<li><button class="tag">#Events</button></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<h1>Nos photographes</h1>
 
+			<article class="photographer">
+				<a href="" class="photographer__link">
+					<img
+						class="photographer__link__img"
+						src="images\Mimi\Portrait_Nora.jpg"
+						alt=""
+					/>
+					<h2 class="photographer__link__name">Mimi Keel</h2>
+					<p class="photographer__link__location">London, UK</p>
+					<p class="photographer__link__motto">
+						Voir le beau dans le quotidien
+					</p>
+					<p class="photographer__link__price">400€/jour</p>
+					<ul class="photographer__link__tags">
+						<li><button class="tag">#Portait</button></li>
+						<li><button class="tag">#Events</button></li>
+						<li><button class="tag">#Travel</button></li>
+						<li><button class="tag">#Animals</button></li>
+					</ul>
+				</a>
+			</article>
+		</main>
+	</body>
+</html>
