creation galerie photographes ok

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			src="https://kit.fontawesome.com/3ce90480cc.js"
 			crossorigin="anonymous"
 		></script>
-		<script src="fishEye.js"></script>
+
 		<link rel="stylesheet" href="public/css/style.css" />
 		<title>Fish Eye</title>
 	</head>
@@ -36,19 +36,22 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+		<main class="main" id="main">
 			<h1>Nos photographes</h1>
-
-			<article class="photographer">
+			<!-- <article class="photographer">
 				<a href="" class="photographer__link">
 					<img
 						class="photographer__link__img"
-						src="images\Mimi\Portrait_Nora.jpg"
+						src="images\Photographers ID Photos\MimiKeel.jpg"
 						alt=""
 					/>
 					<h2 class="photographer__link__name">Mimi Keel</h2>
-					<p class="photographer__link__location">London, UK</p>
-					<p class="photographer__link__motto">
+					<div class="photographer__link__location">
+						<p class="photographer__link__location__city">London</p>
+						<p class="photographer__link__location__country">, UK</p>
+					</div>
+
+					<p class="photographer__link__tagline">
 						Voir le beau dans le quotidien
 					</p>
 					<p class="photographer__link__price">400€/jour</p>
@@ -59,7 +62,8 @@
 						<li><button class="tag">#Animals</button></li>
 					</ul>
 				</a>
-			</article>
+			</article> -->
 		</main>
+		<script src="fishEye.js"></script>
 	</body>
 </html>
