--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 				/>ye</a
 			>
 			<nav class="header__nav">
-				<ul class="header__nav__ul">
-					<li><button class="tag">#Portait</button></li>
+				<ul class="header__nav__ul" id="header__nav__ul">
+					<!-- <li><button class="tag">#Portait</button></li>
 					<li><button class="tag">#Art</button></li>
 					<li><button class="tag">#Fashion</button></li>
 					<li><button class="tag">#Architecture</button></li>
 					<li><button class="tag">#Travel</button></li>
 					<li><button class="tag">#Sports</button></li>
 					<li><button class="tag">#Animals</button></li>
-					<li><button class="tag">#Events</button></li>
+					<li><button class="tag">#Events</button></li> -->
 				</ul>
 			</nav>
 		</header>
