fonction NewArtist OK

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 					<li><button class="tag">#Travel</button></li>
 					<li><button class="tag">#Sports</button></li>
 					<li><button class="tag">#Animals</button></li>
-					<li><button class="tag">#Events</button></li> -->
+					<li><button class="tag">#Events</button></li> -->s
 				</ul>
 			</nav>
 		</header>
 		<main class="main" id="main">
-			<h1>Nos photographes</h1>
+			<!-- <h1>Nos photographes</h1> -->
 			<!-- <article class="photographer">
 				<a href="" class="photographer__link">
 					<img
