fichiers js multiples

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li><button class="tag">#Travel</button></li>
 					<li><button class="tag">#Sports</button></li>
 					<li><button class="tag">#Animals</button></li>
-					<li><button class="tag">#Events</button></li> -->s
+					<li><button class="tag">#Events</button></li> -->
 				</ul>
 			</nav>
 		</header>
@@ -64,6 +64,11 @@
 				</a>
 			</article> -->
 		</main>
-		<script src="fishEye.js"></script>
+		<script src="javaScript/utilitaries.js"></script>
+		<script src="javaScript/fetch.js"></script>
+		<script src="javaScript/createArticle.js"></script>
+		<script src="javaScript/filterArtists.js"></script>
+		<script src="javaScript/navBar.js"></script>
+		<script src="javaScript/global.js"></script>
 	</body>
 </html>
