mise en place methode create

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 		<script src="javaScript/createArticle.js"></script>
 		<script src="javaScript/filterArtists.js"></script>
 		<script src="javaScript/navBar.js"></script>
+
 		<script src="javaScript/global.js"></script>
+		<script src="javaScript/Photographers.js"></script>
 	</body>
 </html>
