--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</nav>
 		</header>
 		<main class="main" id="main">
-			<!-- <h1>Nos photographes</h1> -->
+			<h1>Nos photographes</h1>
 			<!-- <article class="photographer">
 				<a href="" class="photographer__link">
 					<img
@@ -64,6 +64,7 @@
 				</a>
 			</article> -->
 		</main>
+
 		<script src="javaScript/utilitaries.js"></script>
 		<script src="javaScript/fetch.js"></script>
 		<script src="javaScript/createArticle.js"></script>
@@ -72,5 +73,6 @@
 
 		<script src="javaScript/global.js"></script>
 		<script src="javaScript/Photographers.js"></script>
+		<script src="javaScript/HomePage.js"></script>
 	</body>
 </html>
