--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 		<script src="javaScript/utilitaries.js"></script>
 		<script src="javaScript/Photographers.js"></script>
 		<script src="javaScript/HomePage.js"></script>
+		<script src="javaScript/Media.js"></script>
 	</body>
 </html>
