avant retouche fonction tri

--- a/mimikeel.html
+++ b/mimikeel.html
@@ -109,86 +109,144 @@
 			</select>
 
 			<div class="gallery">
-				<div class="gallery__container">
+				<article class="gallery__container">
 					<img
 						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
-
-				<div class="gallery__container">
-					<img
-						src="images\Mimi\Event_BenevidesWedding.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-				</div>
-
-				<div class="gallery__container">
-					<img
-						src="images\Mimi\Event_PintoWedding.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-				</div>
-
-				<div class="gallery__container">
-					<img
-						src="images\Mimi\Event_SeasideWedding.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-				</div>
-
-				<div class="gallery__container">
-					<img
-						src="images\Mimi\Portrait_Background.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-				</div>
-
-				<div class="gallery__container">
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
 					<img
 						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
-
-				<div class="gallery__container">
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
 					<img
-						src="images\Mimi\Event_BenevidesWedding.jpg"
+						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
-
-				<div class="gallery__container">
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
 					<img
-						src="images\Mimi\Event_PintoWedding.jpg"
+						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
-
-				<div class="gallery__container">
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
 					<img
-						src="images\Mimi\Event_SeasideWedding.jpg"
+						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
-
-				<div class="gallery__container">
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
 					<img
-						src="images\Mimi\Portrait_Background.jpg"
+						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-				</div>
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
+					<img
+						src="images\Mimi\Animals_Rainbow.jpg"
+						alt="jkhg"
+						class="gallery__container__thumbnail"
+					/>
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
+				<article class="gallery__container">
+					<img
+						src="images\Mimi\Animals_Rainbow.jpg"
+						alt="jkhg"
+						class="gallery__container__thumbnail"
+					/>
+					<div class="gallery__info">
+						<div class="gallery__info__title">Ici, le titre</div>
+						<div class="gallery__info__likes">
+							<div class="gallery__info__likes__number">12</div>
+							<div class="gallery__info__likes__heart">
+								<i class="fas fa-heart"></i>
+								<!-- <i class="far fa-heart"></i> -->
+							</div>
+						</div>
+					</div>
+				</article>
 			</div>
+			div.
 		</main>
 
 		<script src="javaScript/utilitaries.js"></script>
