fin reprise algo filtrage

--- a/mimikeel.html
+++ b/mimikeel.html
@@ -90,15 +90,8 @@
 					alt=""
 				/>
 			</div>
-
-			<!-- <div class="filter">
-				<p class="filter__p">Trier par</p>
-				<div class="filter__combobox">
-					<div class="filter__combobox__option">Popularité</div>
-					<div class="filter__combobox__option">Date</div>
-					<div class="filter__combobox__option">Titre</div>
-				</div>
-			</div> -->
+	
+			</div> -
 
 			<label for="pet-select">Trier par:</label>
 
