avant essai pattern factory

--- a/mimikeel.html
+++ b/mimikeel.html
@@ -90,10 +90,10 @@
 					alt=""
 				/>
 			</div>
-	
-			</div> -
 
-			<label for="pet-select">Trier par:</label>
+			<!-- </div>  -->
+
+			<label for="jesaispas">Trier par:</label>
 
 			<select name="sortBy" id="filter">
 				<option value="Popularité">Popularité ^</option>
@@ -239,7 +239,6 @@
 					</div>
 				</article>
 			</div>
-			div.
 		</main>
 
 		<script src="javaScript/utilitaries.js"></script>
