affichage media dans la galerie1

--- a/mimikeel.html
+++ b/mimikeel.html
@@ -102,146 +102,28 @@
 			</select>
 
 			<div class="gallery">
-				<article class="gallery__container">
+				<!--EXEMPLE 
+					<article class="gallery__container">
 					<img
 						src="images\Mimi\Animals_Rainbow.jpg"
 						alt="jkhg"
 						class="gallery__container__thumbnail"
 					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
+					<div class="gallery__container__info">
+						<div class="gallery__container__info__title">Ici, le titre</div>
+						<div class="gallery__container__info__likes">
+							<div class="gallery__container__info__likes__number">12</div>
+							<div class="gallery__container__info__likes__heart">
+								<i class="fas fa-heart"></i>								
 							</div>
 						</div>
 					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
-				<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__info">
-						<div class="gallery__info__title">Ici, le titre</div>
-						<div class="gallery__info__likes">
-							<div class="gallery__info__likes__number">12</div>
-							<div class="gallery__info__likes__heart">
-								<i class="fas fa-heart"></i>
-								<!-- <i class="far fa-heart"></i> -->
-							</div>
-						</div>
-					</div>
-				</article>
+				</article> FIN EXEMPLE-->
 			</div>
 		</main>
 
 		<script src="javaScript/utilitaries.js"></script>
+		<script src="javaScript/Gallery.js"></script>
 		<!-- <script src="javaScript/Photographers.js"></script> -->
 		<!-- <script src="javaScript/HomePage.js"></script> -->
 		<script src="javaScript/Media.js"></script>
