avant retouche css gallery

--- a/gallery.html
+++ b/gallery.html
@@ -27,9 +27,27 @@
 			<!-- <nav class="header__nav"></nav> -->
 		</header>
 
-		<main class="gallery__main" id="gallery__MimiKeel">
+		<main class="gallery__main">
 			<div class="gallery__main__presentation">
-				<div class="gallery__main__presentation__info">
+				
+			</div>
+
+			<div class="gallery__main__sorting">
+				<label for="jesaispas">Trier par:</label>
+
+				<select name="sortBy" id="filter">
+					<option value="Popularité">Popularité ^</option>
+					<option value="Date">Date</option>
+					<option value="Titre">Titre</option>
+				</select>
+			</div>
+
+			<div class="gallery__main__gallery">
+
+			</div>
+
+			<!-- <div class="gallery__main__presentation">
+				 <div class="gallery__main__presentation__info">
 					<h1
 						class="
 							photographer__link__name
@@ -82,26 +100,19 @@
 					</ul>
 				</div>
 				<button class="gallery__main__presentation__btn">Contactez-moi</button>
-				<!-- </div> -->
+			
 
 				<img
 					class="photographer__link__img gallery__main__presentation__img"
 					src="images\Photographers ID Photos\MimiKeel.jpg"
 					alt=""
-				/>
+				/> -->
 			</div>
+		
 
-			<!-- </div>  -->
+			
 
-			<label for="jesaispas">Trier par:</label>
-
-			<select name="sortBy" id="filter">
-				<option value="Popularité">Popularité ^</option>
-				<option value="Date">Date</option>
-				<option value="Titre">Titre</option>
-			</select>
-
-			<div class="gallery">
+			<!-- <div class="gallery"> -->
 				<!--EXEMPLE 
 					<article class="gallery__container">
 					<img
@@ -119,7 +130,7 @@
 						</div>
 					</div>
 				</article> FIN EXEMPLE-->
-			</div>
+			<!-- </div> -->
 		</main>
 
 		<script src="javaScript/utilitaries.js"></script>
