--- a/gallery.html
+++ b/gallery.html
@@ -36,9 +36,9 @@
 				<label for="jesaispas">Trier par:</label>
 
 				<select name="sortBy" id="filter">
-					<option value="Popularité">Popularité ^</option>
-					<option value="Date">Date</option>
-					<option value="Titre">Titre</option>
+					<option value="likes">Popularité</option>
+					<option value="date">Date</option>
+					<option value="title">Titre</option>
 				</select>
 			</div>
 
