--- a/gallery.html
+++ b/gallery.html
@@ -131,6 +131,15 @@
 					</div>
 				</article> FIN EXEMPLE-->
 			<!-- </div> -->
+			<div class="bottom">
+				<div class="bottom__likes">
+					<div class="bottom__likes__score"></div>	
+					<div class="bottom__likes__heart"><i class="fas fa-heart"></i></div>
+				</div>
+				
+				<div class="bottom__price"></div>
+
+			</div>
 		</main>
 
 		<script src="javaScript/utilitaries.js"></script>
