--- a/gallery.html
+++ b/gallery.html
@@ -28,9 +28,7 @@
 		</header>
 
 		<main class="gallery__main">
-			<div class="gallery__main__presentation">
-				
-			</div>
+			<div class="gallery__main__presentation"></div>
 
 			<div class="gallery__main__sorting">
 				<label for="jesaispas">Trier par:</label>
@@ -42,9 +40,7 @@
 				</select>
 			</div>
 
-			<div class="gallery__main__gallery">
-
-			</div>
+			<div class="gallery__main__gallery"></div>
 
 			<!-- <div class="gallery__main__presentation">
 				 <div class="gallery__main__presentation__info">
@@ -107,13 +103,10 @@
 					src="images\Photographers ID Photos\MimiKeel.jpg"
 					alt=""
 				/> -->
-			</div>
-		
-
-			
+			<!-- </div> -->
 
 			<!-- <div class="gallery"> -->
-				<!--EXEMPLE 
+			<!--EXEMPLE 
 					<article class="gallery__container">
 					<img
 						src="images\Mimi\Animals_Rainbow.jpg"
@@ -133,12 +126,10 @@
 			<!-- </div> -->
 			<div class="bottom">
 				<div class="bottom__likes">
-					<div class="bottom__likes__score"></div>	
+					<div class="bottom__likes__score"></div>
 					<div class="bottom__likes__heart"><i class="fas fa-heart"></i></div>
 				</div>
-				
 				<div class="bottom__price"></div>
-
 			</div>
 		</main>
 
