--- a/gallery.html
+++ b/gallery.html
@@ -217,11 +217,13 @@
 						><i class="fas fa-chevron-right"></i
 					></span>
 
-					<img
-						class="lightbox__modal__container__img"
-						src="images\Mimi\Event_BenevidesWedding.jpg"
-						alt=""
-					/>
+					<div class="lightbox__modal__container__mediaContainer">
+						<!-- <img
+							class="lightbox__modal__container__mediaContainer__media"
+							src="images\Mimi\Event_BenevidesWedding.jpg"
+							alt=""
+						/> -->
+					</div>
 				</div>
 			</div>
 			<!-- END lighbox modal -->
