refactoring hide/show

--- a/gallery.html
+++ b/gallery.html
@@ -229,6 +229,7 @@
 			<!-- END lighbox modal -->
 		</main>
 		<!-- <script src="javaScript/main.js" type="module"></script> -->
+		<!-- si type module, extension .mjs -->
 		<script src="javaScript/utilitaries.js"></script>
 		<script src="./javaScript/Gallery.js"></script>
 		<script src="javaScript/contactModal.js"></script>
