test import en cours

--- a/gallery.html
+++ b/gallery.html
@@ -230,11 +230,9 @@
 		</main>
 		<!-- <script src="javaScript/main.js" type="module"></script> -->
 		<!-- si type module, extension .mjs -->
-		<script src="javaScript/utilitaries.js"></script>
-		<script src="./javaScript/Gallery.js"></script>
-		<script src="javaScript/contactModal.js"></script>
-		<!-- <script src="javaScript/Photographers.js"></script> -->
-		<!-- <script src="javaScript/HomePage.js"></script> -->
-		<script src="javaScript/Media.js"></script>
+		<!-- <script src="javaScript/utilitaries.js"></script> -->
+		<script src="./javaScript/Gallery.js" type="module"></script>
+		<!-- <script src="javaScript/contactModal.js"></script>
+		<script src="javaScript/Media.js"></script> -->
 	</body>
 </html>
