import page d'accueil ok

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 			</article> -->
 		</main>
 
-		<script src="javaScript/utilitaries.js"></script>
-		<script src="javaScript/Photographers.js"></script>
-		<script src="javaScript/HomePage.js"></script>
-		<script src="javaScript/Media.js"></script>
+		<!-- <script src="javaScript/utilitaries.js"></script> -->
+		<!-- <script src="javaScript/Photographers.js"></script> -->
+		<script type="module" src="javaScript/HomePage.js"></script>
+		<!-- <script src="javaScript/Media.js"></script> -->
 	</body>
 </html>
