--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
 			<div class="gallery__main__sorting">
 				<label for="jesaispas">Trier par:</label>
 
-				<select name="sortBy" id="filter">
+				<select name="sortBy" id="sort">
 					<option value="likes">Popularité</option>
 					<option value="date">Date</option>
 					<option value="title">Titre</option>
