--- a/index.html
+++ b/index.html
@@ -13,61 +13,33 @@
 	</head>
 	<body>
 		<header class="header">
-			<div id="content">
-				<a href="#" class="header__link">Passer au contenu</a>
+			<div class="header__linkContainer">
+				<a href="#" class="header__linkContainer__link">Passer au contenu</a>
 			</div>
-			<a class="header__logo" href="#"
-				>Fish<img
-					src="images/logo/logo.png"
-					alt="logo fisheye"
-					class="header__logo__img"
-				/>ye</a
-			>
-			<nav class="header__nav">
-				<ul class="header__nav__ul" id="header__nav__ul">
-					<!-- <li><button class="tag">#Portait</button></li>
-					<li><button class="tag">#Art</button></li>
-					<li><button class="tag">#Fashion</button></li>
-					<li><button class="tag">#Architecture</button></li>
-					<li><button class="tag">#Travel</button></li>
-					<li><button class="tag">#Sports</button></li>
-					<li><button class="tag">#Animals</button></li>
-					<li><button class="tag">#Events</button></li> -->
-				</ul>
-			</nav>
+			<!-- <a href="#" class="header__link">Passer au contenu</a> -->
+
+			<div class="header__content">
+				<a class="header__content__logo" href="#">
+					<span class="header__content__logo__txt">Fish</span>
+					<img
+						src="images/logo/logo.png"
+						alt="logo fisheye"
+						class="header__content__logo__img"
+					/>
+					<span class="header__content__logo__txt">ye</span></a
+				>
+
+				<nav class="header__content__nav">
+					<ul
+						class="header__content__nav__ul"
+						id="header__content__nav__ul"
+					></ul>
+				</nav>
+			</div>
 		</header>
 		<main class="main" id="main">
-			<h1>Nos photographes</h1>
-			<!-- <article class="photographer">
-				<a href="" class="photographer__link">
-					<img
-						class="photographer__link__img"
-						src="images\Photographers ID Photos\MimiKeel.jpg"
-						alt=""
-					/>
-					<h2 class="photographer__link__name">Mimi Keel</h2>
-					<div class="photographer__link__location">
-						<p class="photographer__link__location__city">London</p>
-						<p class="photographer__link__location__country">, UK</p>
-					</div>
-
-					<p class="photographer__link__tagline">
-						Voir le beau dans le quotidien
-					</p>
-					<p class="photographer__link__price">400€/jour</p>
-					<ul class="photographer__link__tags">
-						<li><button class="tag">#Portait</button></li>
-						<li><button class="tag">#Events</button></li>
-						<li><button class="tag">#Travel</button></li>
-						<li><button class="tag">#Animals</button></li>
-					</ul>
-				</a>
-			</article> -->
+			<h1 class="main__h1">Nos photographes</h1>
 		</main>
-
-		<!-- <script src="javaScript/utilitaries.js"></script> -->
-		<!-- <script src="javaScript/Photographers.js"></script> -->
 		<script type="module" src="javaScript/HomePage.js"></script>
-		<!-- <script src="javaScript/Media.js"></script> -->
 	</body>
 </html>
