--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<body>
 		<header class="header">
 			<div class="header__linkContainer">
-				<a href="#" class="header__linkContainer__link">Passer au contenu</a>
+				<a href="#main" class="header__linkContainer__link"
+					>Passer au contenu</a
+				>
 			</div>
 			<!-- <a href="#" class="header__link">Passer au contenu</a> -->
 
