--- a/gallery.html
+++ b/gallery.html
@@ -28,18 +28,6 @@
 			</nav>
 		</header>
 
-		<!-- <header class="header__gallery">
-			<nav class="header__gallery__nav">
-				<a class="header__logo" href="index.html" alt="Fisheye home page"
-					>Fish<img
-						src="images/logo/logo.png"
-						alt="logo fisheye"
-						class="header__logo__img"
-					/>ye</a
-				>
-			</nav>			
-		</header> -->
-
 		<main class="gallery__main">
 			<div class="gallery__main__presentation"></div>
 
@@ -55,89 +43,6 @@
 			</div>
 
 			<div class="gallery__main__gallery"></div>
-
-			<!-- <div class="gallery__main__presentation">
-				 <div class="gallery__main__presentation__info">
-					<h1
-						class="
-							photographer__link__name
-							gallery__main__presentation__info__name
-						"
-					>
-						Mimi Keel
-					</h1>
-					<div
-						class="
-							photographer__link__location
-							gallery__main__presentation__info__location
-						"
-					>
-						<p
-							class="
-								photographer__link__location__city
-								gallery__main__presentation__info__location__city
-							"
-						>
-							London
-						</p>
-						<p
-							class="
-								photographer__link__location__country
-								gallery__main__presentation__info__location__country
-							"
-						>
-							, UK
-						</p>
-					</div>
-					<div
-						class="
-							photographer__link__tagline
-							gallery__main__presentation__info__tagline
-						"
-					>
-						Voir le beau dans le quotidien
-					</div>
-					<ul
-						class="
-							photographer__link__tags
-							gallery__main__presentation__info__tags
-						"
-					>
-						<li><button class="tag">#Portait</button></li>
-						<li><button class="tag">#Events</button></li>
-						<li><button class="tag">#Travel</button></li>
-						<li><button class="tag">#Animals</button></li>
-					</ul>
-				</div>
-				<button class="gallery__main__presentation__btn">Contactez-moi</button>
-			
-
-				<img
-					class="photographer__link__img gallery__main__presentation__img"
-					src="images\Photographers ID Photos\MimiKeel.jpg"
-					alt=""
-				/> -->
-			<!-- </div> -->
-
-			<!-- <div class="gallery"> -->
-			<!--EXEMPLE 
-					<article class="gallery__container">
-					<img
-						src="images\Mimi\Animals_Rainbow.jpg"
-						alt="jkhg"
-						class="gallery__container__thumbnail"
-					/>
-					<div class="gallery__container__info">
-						<div class="gallery__container__info__title">Ici, le titre</div>
-						<div class="gallery__container__info__likes">
-							<div class="gallery__container__info__likes__number">12</div>
-							<div class="gallery__container__info__likes__heart">
-								<i class="fas fa-heart"></i>								
-							</div>
-						</div>
-					</div>
-				</article> FIN EXEMPLE-->
-			<!-- </div> -->
 
 			<!-- Bottom zone -->
 			<div class="bottom">
@@ -221,6 +126,10 @@
 			<div class="modal lightbox__modal">
 				<div class="modal__bground lightbox__modal__bground"></div>
 				<div class="modal__container lightbox__modal__container">
+					<!-- <div class="lightbox__modal__bground modal__bground"></div>
+				
+					<div class="lightbox__modal__container"></div> -->
+
 					<span class="close pointer lightboxBtn" id="btnCloseLightbox"
 						><i class="fas fa-times"></i
 					></span>
