css modale contact

--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,9 @@
 				<div class="modal__container modal__form">
 					<div class="modal__container__head">
 						<div class="modal__container__head__contact">Contactez-moi</div>
-						<span class="close pointer" id="btnClose">&times;</span>
+						<span class="pointer" id="btnClose"
+							><i class="fas fa-times"></i
+						></span>
 					</div>
 					<div class="modal__container__name"></div>
 					<div class="modal__container__fields">
@@ -110,7 +112,7 @@
 							</div>
 
 							<input
-								class="btn-submit"
+								class="btn-submit pointer"
 								type="submit"
 								class="button"
 								id="submit"
