--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,11 @@
 			</div> -->
 
 			<!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
-			<div class="custom-select" style="width: 200px">
+			<div class="custom-select">
+				<!-- style="width: 200px" -->
+				<label>Trier par:</label>
 				<select id="sort">
-					<option value="0">Select car:</option>
+					<!-- <option value="0">Select car:</option> -->
 					<option value="likes">Popularité</option>
 					<option value="date">Date</option>
 					<option value="title">Titre</option>
