--- a/gallery.html
+++ b/gallery.html
@@ -30,22 +30,9 @@
 
 		<main class="gallery__main">
 			<div class="gallery__main__presentation"></div>
-
-			<!-- <div class="gallery__main__sorting">
-				<label>Trier par:</label>
-				<select name="sortBy" id="sort">
-					<option value="likes">Popularité</option>
-					<option value="date">Date</option>
-					<option value="title">Titre</option>
-				</select>
-			</div> -->
-
-			<!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
 			<div class="custom-select">
-				<!-- style="width: 200px" -->
 				<label>Trier par:</label>
 				<select id="sort">
-					<!-- <option value="0">Select car:</option> -->
 					<option value="likes">Popularité</option>
 					<option value="date">Date</option>
 					<option value="title">Titre</option>
@@ -163,12 +150,8 @@
 			</div>
 			<!-- END lighbox modal -->
 		</main>
-		<!-- <script src="javaScript/main.js" type="module"></script> -->
-		<!-- si type module, extension .mjs -->
-		<!-- <script src="javaScript/utilitaries.js"></script> -->
+
 		<script src="./javaScript/Gallery.js" type="module"></script>
-		<script src="javaScript/combobox.js"></script>
-		<!-- <script src="javaScript/contactModal.js"></script>
-		<script src="javaScript/Media.js"></script> -->
+		<script src="javaScript/comboBox.js"></script>
 	</body>
 </html>
