--- a/gallery.html
+++ b/gallery.html
@@ -128,10 +128,6 @@
 			<div class="modal lightbox__modal">
 				<div class="modal__bground lightbox__modal__bground"></div>
 				<div class="modal__container lightbox__modal__container">
-					<!-- <div class="lightbox__modal__bground modal__bground"></div>
-				
-					<div class="lightbox__modal__container"></div> -->
-
 					<span class="close pointer lightboxBtn" id="btnCloseLightbox"
 						><i class="fas fa-times"></i
 					></span>
@@ -142,13 +138,7 @@
 						><i class="fas fa-chevron-right"></i
 					></span>
 
-					<div class="lightbox__modal__container__mediaContainer">
-						<!-- <img
-							class="lightbox__modal__container__mediaContainer__media"
-							src="images\Mimi\Event_BenevidesWedding.jpg"
-							alt=""
-						/> -->
-					</div>
+					<div class="lightbox__modal__container__mediaContainer"></div>
 				</div>
 			</div>
 			<!-- END lighbox modal -->
