--- a/gallery.html
+++ b/gallery.html
@@ -104,19 +104,16 @@
 								<label for="message">Votre message</label><br />
 								<textarea
 									class="text-control"
-									type="message"
 									id="message"
 									name="message"
 								></textarea>
 							</div>
 
 							<input
-								class="btn-submit pointer"
+								class="btn-submit pointer button"
 								type="submit"
-								class="button"
 								id="submit"
 								value="Envoyer"
-								role="button"
 							/>
 						</form>
 					</div>
